<resources>
    <string name="app_name">KrishiBondhuApp</string>
    <string name="help">Help</string>
    <string name="buy">Buy</string>
    <string name="sell">Sell</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="post">Post</string>
    <string name="note">Please use Email and Password \n which is provided \n by \n Government.</string>
    <string name="otp_page">
        We will send a OTP for Varification Code To Your Given Mobile Number
    </string>
    <string name="otp_second_page">
         Enter The Verification Code That We Send In Your Mobile Number
    </string>
    <string name="news_feed">
            এ রোগটি চারা অবস্থা থেকে যে কোনো বয়সের ধান গাছে হতে পারে। তবে চারার বয়স বেশি হলে রোগটির প্রকোপ বেশি দেখা যায়।
            মাটিতে পুষ্টি উপাদানের অভাব বা পানির অভাব হলে রোগের মাত্রা বেড়ে যায়।রোগের নাম : ব্লাস্ট রোগ
            এ রোগটি আমন ও বোরো উভয় মৌসুমেই হতে পারে। ধানের চারা অবস্থা থেকে ধান পাকার আগ পর্যন্ত যে কোনো সময় এ রোগটি হতে পারে।
            বীজ, বাতাস, কীটপতঙ্গ ও আবহাওয়ার মাধ্যমে ছড়ায়। পাতা ব্লাস্ট
            পাতায় প্রথমে ডিম্বাকৃতির ছোট ছোট ধূসর বা সাদা বর্ণের দাগ দেখা যায়। দাগগুলোর চারদিক
            গাঢ় বাদামি বর্ণের হয়ে থাকে। পরবর্তীতে এ দাগ ধীরে ধীরে বড় হয়ে চোখের আকৃতি ধারণ করে।</string>
    <string name="agree_text">I have read and agree to share my Personal Identifiable Information and other Information</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string-array name="foshol">

        <item>মাঠ_ফসল</item>
        <item>ফল</item>
        <item>ফুল</item>
        <item>শাক_সবজি</item>
        <item>মসলা</item>
        <item>গৃহপালিত_পশু_পাখি</item>

    </string-array>
    <string-array name="array2">

        <item>ধান </item>
        <item>পাট </item>
        <item>গম </item>
        <item>ভুট্টা </item>
        <item>সরিষা </item>

    </string-array>
    <string-array name="mathfosol">

        <item>ধান </item>
        <item>পাট </item>
        <item>গম </item>
        <item>ভুট্টা </item>
        <item>সরিষা </item>

    </string-array>
    <string-array name="fols">
        <item>আম  </item>
        <item>কাঁঠাল  </item>
        <item>লিচু  </item>
        <item>কমলা  </item>
        <item>পেঁপে </item>

    </string-array>
    <string-array name="fuls">
        <item>গোলাপ   </item>
        <item>জবা   </item>
        <item>গাদা   </item>
        <item>অর্কিড   </item>
    </string-array>
    <string-array name="saksobji">
        <item>শিম   </item>
        <item>আলু   </item>
        <item>বেগুন  </item>
        <item>টমেটো </item>

    </string-array>
    <string-array name="moshla">
        <item>জিরা     </item>
        <item>এলাচ    </item>
        <item>দারুচিনি    </item>
        <item>হলুদ    </item>
    </string-array>
    <string-array name="home_pets_animals">
        <item>গরু </item>
        <item>ছাগল  </item>
        <item>মহিষ </item>
        <item>হাঁস </item>
        <item>মুরগি </item>
    </string-array>
    <string-array name="quantity1">
        <item>কেজি</item>
        <item>মণ</item>
        <item>বস্তা</item>
    </string-array>
    <string-array name="quantity2">
        <item>টি</item>
        <item>শত</item>
        <item>হাজার</item>
    </string-array>
    <string name="dhan">ধান চাষ করতে হলে প্রথমে বীজতলা তৈরী করতে হয়, সেখানে বীজ ছিটিয়ে রেখে কয়েকদিন সেচ দিতে হয় তারপর ছোট চারা তৈরী হলে
        সেগুলোকে তুলে প্রধান জমিতে রোপন করা হয়। তাছাড়া সরাসরি বীজ প্রধান জমিতে ছিটিয়েও চাষ করা হয়।  রোগেরনাম: বাদামিদাগরোগ
        এ রোগটি চারা অবস্থা থেকে যে কোনো বয়সের ধান গাছে হতে পারে। তবে চারার বয়স বেশি হলে রোগটির প্রকোপ বেশি দেখা যায়।
        মাটিতে পুষ্টি উপাদানের অভাব বা পানির অভাব হলে রোগের মাত্রা বেড়ে যায়।রোগের নাম : ব্লাস্ট রোগ
        এ রোগটি আমন ও বোরো উভয় মৌসুমেই হতে পারে। ধানের চারা অবস্থা থেকে ধান পাকার আগ পর্যন্ত যে কোনো সময় এ রোগটি হতে পারে।
        বীজ, বাতাস, কীটপতঙ্গ ও আবহাওয়ার মাধ্যমে ছড়ায়। পাতা ব্লাস্ট
        পাতায় প্রথমে ডিম্বাকৃতির ছোট ছোট ধূসর বা সাদা বর্ণের দাগ দেখা যায়। দাগগুলোর চারদিক
        গাঢ় বাদামি বর্ণের হয়ে থাকে। পরবর্তীতে এ দাগ ধীরে ধীরে বড় হয়ে চোখের আকৃতি ধারণ করে।
    </string>
    <string name="pat">সাধারণত ভালো ফলন ও উন্নত মানের আঁশের জন্য ক্ষেতের শতকরা প্রায় পঞ্চাশ ভাগ গাছে ফুলের কুঁড়ি দেখা দিলে (সাধারণত ১১০-১২০ দিনে প্রায় ৫০% গাছে ফুল আসে) পাট কাটা উচিত।
            উল্লেখিত সময়ের পূর্বে পাট কাটলে আঁশের মান ভালো থাকে, কিন্তু ফলন কম হয়। আবার দেরিতে কাটলে ফলন বেশি হয় কিন্তু আঁশের মান খুব খারাপ হয়।
            পাট কাটার পর ছোট-চিকন ও মোটা পাটগুলো আলাদা আলাদা আঁটি বেঁধে পাতা ঝরানোর জন্যে পাতার অংশ খড়-কুটা দিয়ে ৭২ ঘন্টা (৩ দিন) ঢেকে রাখলে পাতা ঝরে যায়।
            অতঃপর আঁটিগুলোর গোড়া ৭০-৯০ ঘন্টা (৩-৪ দিন) পানিতে ডুবিয়ে রাখার পর জাগ দেওয়ার ব্যবস্থা করতে হবে।
            পরিস্কার ও অল্প স্রোত আছে এমন পানিতে জাগ দিতে হবে। জাগের আকার যদি চৌকাকার বা আয়তাকার হয় তবে প্রথমে নির্দিষ্ট মাপ মোতাবেক এক স্তর আটি পাশাপাশি গোড়া-মাথা করে বিছানো ও বাঁধা হয়। প্রথম স্তর আঁটি সাজানোর পর আড়াআড়ি ভাবে দ্বিতীয় স্তর আঁটি ১ম স্তরের নিয়মে সাজানো ও বাঁধা হয়।
            বদ্ধ পানিতে পাট পঁচালে প্রতি ১০০ আঁটি পাটের জন্য ১ কেজি ইউরিয়া সার সরাসরি জাগের আঁটির সারিতে ছিটিয়ে দিতে হয়।
            এতে পাট তাড়াতাড়ি পঁচে এবং আঁশের মান ভালো হয়।
            জাগ এমন ভাবে ডুবাতে হবে যেন জাগের উপর ৩-৪ ইঞ্চি এবং নীচে কমপক্ষে ২০-২৫ ইঞ্চি পানি থাকে।
            জাগের উপর কচুরীপানা বা খড়-কুটা বিছিয়ে তার উপর পাথর বা কংক্রিটের চৌকা চাকতি দিয়ে অথবা খুঁটির সাথে দড়ি দিয়ে বেঁধে জাগ ডুবানো উচিত।
            জাগ ডুবানোর জন্য কখনও জাগের উপর মাটির চাক বা কলাগাছ বা কাঠের গুঁড়ি দেয়া উচিত নয়। কারণ তাতে আঁশের বর্ণ কালচে হয়ে যেতে পারে।
    </string>
    <string name="gom"> সারিতে বা ছিটিয়ে গম বীজ বপন করা যায়। সারিতে বপনের জন্য জমি তৈরির পর ছোট লাঙল দিয়ে ২০ সেমি. দূরে দূরে সারি তৈরি করে
            এবং ৩-৪ সেমি গভীরে বীজ বুনতে হবে। আগাম বপনের জন্য পাওয়ার টিলারচালিত বীজ বপন যন্ত্রের সাহায্যে গম আবাদ করা যায়।
            যন্ত্রটির সুবিধা হলোÑ ধান কাটার পরপর একই সময়ে চাষ, বীজ বপন ও মই দেয়ার কাজ করা যায়।যন্ত্রটিতে ২০ কেজি বীজ রাখার মতো একটি হপার থাকে এবং ২০ সেমি. দূরে দূরে ৬ সারিতে ৩-৪ সেমি. গভীরে বীজ বোনা যায়।
            বীজ বোনার সঙ্গে সঙ্গে বীজ ঢেকে দেয়া হয় করে বলে পাখি কম ক্ষতি করে এবং শতকরা প্রায় ২০ ভাগ বীজের সাশ্রয় হয়।ভালো ফলনের জন্য মাটির প্রকার ভেদে ২-৩টি সেচের প্রয়োজন হয়। কিন্তু অধিক বেলেমাটিতে আরও অতিরিক্ত ১-২টি সেচের প্রয়োজন হতে পারে। চারার বয়স ১৭-২১ দিন হলে অর্থাৎ চারার তিন পাতা অবস্থায় প্রথম সেচ দিতে হবে।
            শীষ বের হওয়ার সময়ে অর্থাৎ বপনের ৫০-৫৫ দিন পর দ্বিতীয় সেচ দিতে হবে এবং দানা গঠনের সময় অর্থাৎ বপনের ৭০-৭৫ দিন পর তৃতীয় সেচ দিতে হবে।বীজ বপনের পর ১০-১২ দিন পর্যন্ত পাখি তাড়ানোর ব্যবস্থা নিতে হবে। প্রথম সেচের পর জমিতে জো এলে নিড়ানি দিয়ে মাটি আলগা এবং আগাছা তোলার ব্যবস্থা করতে হবে। বীজ বপনের ১ মাসের মধ্যে আগাছা দমন করা উচিত।
            রোগ, পোকা ও ইঁদুর দমন : অন্য ফসলের তুলনায় গমে রোগবালাই খুব কম হয়।
            পাতার দাগ ও মরিচা রোগ- গমের এ প্রধান রোগ দুটি নতুন জাতগুলোতে কম হয়।
            তবে কোনো কারণে রোগ দুটি দেখা দিলে টিল্ট ২৫০ ইসি ছত্রাকনাশক প্রতি লিটার পানিতে ০.৫ মিলি মিশিয়ে শীষ বের হওয়ার সময় একবার
            এবং ১৫ দিন পর আর একবার স্প্রে করতে হবে। গম ক্ষেতে জাব পোকার আক্রমণ দেখা দিলে ১২.৫ লিটার পানিতে চা চামচের চার চামচ
            ম্যালাথিয়ন ৫৭ ইসি মিশিয়ে স্প্রে করতে হবে। গম ক্ষেতে মাজরা পোকার আক্রমণ দেখা দিলে ডায়াজিনন ৬০ ইসি একই মাত্রায় প্রয়োগ করতে হবে।
    </string>
    <string name="vutta">শুভ্রা, বর্ণালী ও মোহর জাতের ভুট্টার জন্য হেক্টরপ্রতি ২৫ থেকে ৩০ কেজি এবং খইভুট্টা জাতের জন্য  ১৫ থেকে ২০ কেজি হারে বীজ প্রয়োজন হবে।
            ভুট্টার  বীজ সারিতে বুনতে হয়।
            এক্ষেত্রে সারি থেকে সারির  দূরত্ব ৭৫ সেন্টিমিটার এবং সারিতে ২৫ সেন্টিমিটার দূরত্বে ১টি অথবা ৫০ সেন্টিমিটার দূরত্বে দুইটি গাছ রাখতে হবে
            ফসলের ভালো ফলনের জন্য সার ব্যবস্থাপনা গুরুত্বপূর্ণ। ভুট্টার ক¤েপাজিট জাতের জন্য প্রতি হেক্টরে রবি মৌসুমে ১৭২ থেকে ৩১২ কেজি এবং
            খরিফ মৌসুমে ২১৬ থেকে ২৬৪ কেজি ইউরিয়া সার প্রয়োজন হয়। হাইব্রিড জাতের জন্য রবি মৌসুমে এ চাহিদা ৫০০ থেকে ৫৫০ কেজি।
            ক¤েপাজিট জাতের জন্য প্রতি হেক্টরে  টিএসপি, এমওপি, জিপসাম, জিংক সালফেট, বোরিক এসিড  ও গোবর সার প্রয়োজন রবি মৌসুমে
            যথাক্রমে ১৬৮ থেকে ২১৬ কেজি, ৯৬ থেকে ১৪৪ কেজি, ১৪৪ থেকে ১৬৮ কেজি, ১০ থেকে ১৫ কেজি, ৫ থেকে ৭ কেজি ও ৪ থেকে ৬ টন এবং
            খরিফ মৌসুমে যথাক্রমে ১৩২ থেকে ২১৬ কেজি, ৭২ থেকে ১২০ কেজি, ৯৬ থেকে ১৪৪ কেজি, ৭ থেকে ১২ কেজি, ৫ থেকে ৭ কেজি ও ৪ থেকে ৬ টন।
            হাইব্রিড জাতের জন্য রবি মৌসুমে প্রয়োজন ২৪০ থেকে ২৬০ কেজি টিএসপি, ১৮০ থেকে ২২০ কেজি এমওপি, ২৪০ থেকে ২৬০ কেজি জিপসাম,
            ১০ থেকে ১৫ কেজি জিংক সালফেট, ৫ থেকে ৭ কেজি বোরিক এসিড এবং ৪ থেকে ৬ টন গোবর সার। জমি তৈরির শেষ পর্যায়ে মোট ইউরিয়ার এক তৃতীয়াংশ
            এবং অন্যান্য সারের সবটুকু ছিটিয়ে জমি চাষ দিতে হবে। বাকি  ইউরিয়া সমান ২ ভাগ করে প্রথম কিস্তি বীজ গজানোর ২৫ থেকে ৩০ দিন পর এবং
            দ্বিতীয় কিস্তি বীজ গজানোর ৪০ থেকে ৫০ দিন পর উপরিপ্রয়োগ করতে হবে।
            ভুট্টায় সাধারণত যেসব রোগবালাইয়ের আক্রমণ দেখা যায় তার মধ্যে উল্লেখযোগ্য হলো বীজ পচা ও চারা গাছের রোগ।
            নানা রকম বীজ ও মাটিবাহিত ছত্রাকের কারণে এ রোগ হতে পারে। এ রোগ হলে  ক্ষেতে ভুট্টা গাছের সংখ্যা কমে যায়।
            বর্ণালী ও মোহর জাত এ রোগ প্রতিরোধী। জমিতে পরিমিত  রস  ও তাপমাত্রায় (১৩ সেলসিয়াসের বেশি) বজায় রেখে এ রোগের প্রকোপ কমানো যায়।
            এছাড়াও সুস্থ সবল বীজ ব্যবহার এবং বীজ শোধন করে আক্রমণ প্রতিরোধ করা যায়।
            বীজ শোধনের জন্য থিরাম বা ভিটাভেক্স (০.২৫%) ২.৫ থেকে ৩.০ গ্রাম/কেজি হারে মিশিয়ে নিতে হবে।
    </string>
    <string name="sorisha">
            জমিতে ৪-৬টি চাষ মই দিয়ে তৈরি করতে হবে৷ চাষ কম হলে সরিষা বীজের অঙ্কুরোদগমে বিঘ্ন ঘটে৷ মাটির জো অবস্থায় জমি চাষ দিতে হবে৷
            এতে মাটিতে ঢেলা থাকবে না, মাটি সমতল হবে৷ জমি চাষ করর সময় আগাছা ভালোভাবে বাছাই করতে হবে,
            যাতে ফসলে আগাছার প্রকোপ কম হয়৷ সরিষা জমির চাষ ১০-১২ সেন্টিমিটার গভীরে হওয়া দরকার৷ সরিষা জমিতে চাষ করার ফাঁকে ফাঁকে রোদ লাগতে হবে৷
            পাওয়ার টিলার দিয়ে চাষ দিলে ২-৩টি চাষই যথেষ্ট, তবে ভালোভাবে চাষ-মই দিয়ে জমি সমতল করতে হবে৷
            বীজ বপন পদ্ধতি: বাংলাদেশ প্রধানত সরিষার বীজ ছিটিয়ে বপন করা হয়৷ তবে সারিতে বীজ বপন করলে ফসলের পরিচর্যা করতে সুবিধা হয়৷
            অবশ্য সারিতে বীজ বুনতে কিছু অতিরিক্ত ব্যয় হয়৷
            বীজের হার: প্রতি হেক্টর ৭-৮ কেজি, গাছ সংখ্যা প্রতি বর্গমিটারে ৪৫ থেকে ৬৫টি (গাছের ধরন অনুসারে)৷
            সারির দূরত্ব: সারি থেকে সারির দূরত্ব ২৫ থেকে ৩০ সেন্টিমিটার৷
            সোনালী সরিষা, বারি সরিষা ৬ (ধলি), বারি সরিষা ৭ ও বারি সরিষা ৬ উফশী জাতসমূহ পানি সেচ দিলে ফলন বেশি হয়৷
            বীজ বপনের ২৫-৩০ দিনের মধ্যে (গাছে ফুল আসার আগে) প্রথম সেচ এবং ৫০-৫৫ দিনের মধ্যে (ফল ধরার সময়) দ্বিতীয় সেচ দিতে হবে৷ বপনের সময় মাটিতে রস কম থাকলে চারা গজানো ১০-১৫ দিনের মধ্যে একটা হালকা সেচ দিতে হবে৷
            সেচের নিশ্চয়তা থাকলে সার বেশি দিতে হবে৷
    </string>
    <string name="an2">২০১৭-১৮ মৌসুমে বিভিন্ন ফসলের আওতাধীন জমির পরিমাণ, বীজের কৃষিতাত্ত্বিক প্রয়োজন ও সরবরাহকৃত গুণগত মানসম্পন্ন বীজের পরিমাণ সম্পর্কিত তথ্য</string>
    <string name="an1">২০১৯-২০ মৌসুমে হাইব্রিড ধান বীজ আমাদানি অনুমোদন</string>
    <string name="an3">২০১৯-২০ অর্থ বছরের খরিফ মৌসুমের বিভিন্ন ফসলের জেলা ভিত্তিক জমি ও উৎপাদন লক্ষ্যমাত্রার বিভাজন</string>
    <string name="an4">জানূয়ারি ২০০৯-জুন ২০১৭ পর্যন্ত বীজ সংক্রান্ত তথ্য</string>
    <string name="an5">২০১৬-১৭ মৌসুমে বিভিন্ন ফসলের আওতাধীন জমির পরিমাণ, বীজের কৃষিতাত্ত্বিক প্রয়োজন ও সরবরাহকৃত গুণগত মানসম্পন্ন বীজের পরিমাণ সম্পর্কিত তথ্য</string>
    <string name="AN6">২০১৮-১৯ অর্থবছরের বোরো ধানসহ অন্যান্য রবি ফসল এবং ২০১৯-২০ অর্থবছরের ইক্ষু ও তুলা ফসল আবাদ ও উৎপাদন লক্ষ্যমাত্রার বিভাজন।</string>
</resources>