<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Announcement">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="Notice Board"
        android:textColor="#000"
        android:padding="5dp"
        android:textSize="20sp"
        android:textStyle="bold" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="40dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_marginTop="10dp"
                android:padding="5dp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                        <ImageView
                            android:layout_width="130dp"
                            android:layout_height="wrap_content"
                            android:scaleType="fitXY"
                            android:src="@drawable/dhan" />

                        <TextView
                            android:layout_marginStart="8dp"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:text="@string/an1"
                            android:textSize="15sp"
                            android:textStyle="bold" />
                </LinearLayout>



            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_marginTop="10dp"
                android:padding="5dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                        <ImageView
                            android:layout_width="130dp"
                            android:layout_height="wrap_content"
                            android:scaleType="fitXY"
                            android:src="@drawable/an1" />

                        <com.codesgood.views.JustifiedTextView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:text="@string/an2"
                            android:textSize="15sp"
                            android:layout_marginStart="8dp"
                            android:textStyle="bold" />


                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_marginTop="10dp"
                android:padding="5dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                        <ImageView
                            android:layout_width="130dp"
                            android:layout_height="wrap_content"
                            android:scaleType="fitXY"
                            android:src="@drawable/an5" />

                        <com.codesgood.views.JustifiedTextView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:text="@string/an3"
                            android:layout_marginStart="8dp"
                            android:textSize="15sp"
                            android:textStyle="bold" />


                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_marginTop="10dp"
                android:padding="5dp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                        <ImageView
                            android:layout_width="130dp"
                            android:layout_height="wrap_content"
                            android:scaleType="fitXY"
                            android:src="@drawable/an2" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:text="@string/an4"
                            android:textSize="15sp"
                            android:layout_marginStart="8dp"
                            android:textStyle="bold" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_marginTop="10dp"
                android:padding="5dp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <ImageView
                     android:layout_width="130dp"
                     android:layout_height="wrap_content"
                     android:scaleType="fitXY"
                     android:src="@drawable/an3" />

                    <com.codesgood.views.JustifiedTextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/an5"
                        android:layout_marginStart="8dp"
                        android:textSize="15sp"
                        android:textStyle="bold" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_marginTop="10dp"
                android:padding="5dp"
                app:cardCornerRadius="10dp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                        <ImageView
                            android:layout_width="130dp"
                            android:layout_height="wrap_content"
                            android:scaleType="fitXY"
                            android:src="@drawable/an4" />

                        <com.codesgood.views.JustifiedTextView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:text="@string/AN6"
                            android:layout_marginStart="8dp"
                            android:textSize="15sp"
                            android:textStyle="bold" />
                </LinearLayout>

            </androidx.cardview.widget.CardView>

        </LinearLayout>
    </ScrollView>
</FrameLayout>